syntax = "proto3";

package pb;

option go_package = "worker-service/proto/pb";

service UserService {
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
}

message GetUserByIdRequest { string id = 1; }

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string status = 4;
  string role_id = 5;
  string password = 6; // hashed
}

message GetUserByIdResponse {
  bool found = 1;
  User user = 2;
}

